--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,32 @@ nav ul li {
 .navbar-nav > li > a:hover {
   border-top: 0.1875rem solid var(--primary-orange);
 }
+
+/****************** HEADER ************************/
+.header-wrapper {
+  position: relative;
+  background: url(developer-page.jpeg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+.main-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+}
+
+.main-info h1 {
+  color: var(--primary-orange);
+  text-transform: uppercase;
+}
+
+/****** TYPED TEXT ******/
+.typed-text {
+  font-size: 2rem;
+  color: var(--primary-white);
+}
