adjusting media sizes

--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,7 @@ nav ul li {
   align-items: center;
   text-align: center;
   font-family: "Open Sans", sans-serif;
+  z-index: 1;
 }
 
 .main-info h1 {
@@ -88,6 +89,15 @@ nav ul li {
   color: var(--primary-white);
 }
 
+@media (max-width: 768px) {
+  .main-info h1 {
+    font-size: 1.7rem !important;
+  }
+  .typed-text {
+    font-size: 1.5 rem !important;
+  }
+}
+
 .btn-main-offer {
   border: 1px solid var(--primary-red);
   text-transform: uppercase;
@@ -97,10 +107,23 @@ nav ul li {
   margin-top: 2rem;
 }
 
+.btn-main-offer:hover {
+  text-decoration: none;
+  background-color: var(--primary-hover-red);
+  color: var(--primary-white);
+  transition: 0.2s ease-in-out;
+}
+
 /********* PARTICLES **********/
 .tsparticles-canvas-el {
   position: absolute;
   height: 100vh;
   width: 100vw;
   z-index: 1;
+}
+
+@media (max-width: 768px) {
+  .particles-canvas {
+    display: none;
+  }
 }
